--- a/.env.example
+++ b/.env.example
@@ -47,7 +47,7 @@ VK_SECRET_KEY="REPLACE_ME"
 VK_API_VERSION=5.103
 VK_MESSAGES_ENDPOINT=https://api.vk.com/method/
 VK_CONFIRM="REPLACE_ME"
-VK_GROUP_ID=193471419
+VK_GROUP_ID="YOUR_GROUP_ID"
 
 # Telegram driver settings
 TELEGRAM_TOKEN="REPLACE_ME"
