Custom meme creation improve * Conversation of creating custom demotivation posters * 'When...' meme creation improve * Text wrapping (by width, line limiting) * DB migrations update * symfony/string dependency add * TextBrush update * TODOs
Fixed:
* Freeze during sending memes => $img->blur(25) reduce

--- a/composer.json
+++ b/composer.json
@@ -27,9 +27,10 @@
         "laravel/tinker": "^1.0",
         "league/flysystem": "^1.0",
         "nuwave/lighthouse": "^4.16",
+        "opis/closure": "^3.4.2",
         "ralouphie/mimey": "^2.1",
-        "yageorgiy/botman-vk-community-callback-driver": "^1.6.1",
-        "opis/closure": "^3.4.2"
+        "symfony/string": "^5.1",
+        "yageorgiy/botman-vk-community-callback-driver": "^1.6.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
