Back-end English translation, proper routes, .env preset update.

--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,7 @@ VK_API_VERSION=5.103
 VK_MESSAGES_ENDPOINT=https://api.vk.com/method/
 VK_CONFIRM="REPLACE_ME"
 VK_GROUP_ID="YOUR_GROUP_ID"
+VK_CONFIRMATION_TOKEN="REPLACE_ME" # Token to reply on "confirmation" event
 
 # Telegram driver settings
 TELEGRAM_TOKEN="REPLACE_ME"
