--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,8 @@
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "league/flysystem": "^1.0",
+        "mll-lab/graphql-php-scalars": "^3.1",
+        "mll-lab/laravel-graphql-playground": "^2.3",
         "nuwave/lighthouse": "^4.16",
         "opis/closure": "^3.4.2",
         "ralouphie/mimey": "^2.1",
@@ -37,6 +39,8 @@
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
+        "haydenpierce/class-finder": "^0.4.2",
+        "marvinrabe/laravel-graphql-test": "^0.3.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "^7.0"
