--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "botman/tinker": "~1.0",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
+        "joselfonseca/lighthouse-graphql-passport-auth": "3.0.4",
         "laravel/framework": "5.7.*",
+        "laravel/passport": "7.5.1",
         "laravel/tinker": "^1.0",
         "league/flysystem": "^1.0",
         "mll-lab/graphql-php-scalars": "^3.1",
