Dependency implementation: GraphQL auth, User permissions

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,7 @@ VK_CONFIRMATION_TOKEN="REPLACE_ME" # Token to reply on "confirmation" event
 
 # Telegram driver settings
 TELEGRAM_TOKEN="REPLACE_ME"
+
+# Do "php artisan passport:install" and paste the "Password grant client" secret here (default client id: 2)
+PASSPORT_CLIENT_ID=2
+PASSPORT_CLIENT_SECRET=
