--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "ralouphie/mimey": "^2.1",
         "spatie/laravel-permission": "2.38.0",
         "symfony/string": "^5.1",
-        "yageorgiy/botman-vk-community-callback-driver": "^1.7.2"
+        "yageorgiy/botman-vk-community-callback-driver": "^1.7.2",
+        "ext-fileinfo": "*"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
