--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "type": "project",
     "require": {
         "php": "^7.4.3",
+        "ext-fileinfo": "*",
         "ext-json": "*",
         "ext-pdo": "*",
         "botman/botman": "~2.0",
@@ -32,11 +33,11 @@
         "mll-lab/laravel-graphql-playground": "^2.3",
         "nuwave/lighthouse": "^4.16",
         "opis/closure": "^3.4.2",
+        "pragmarx/version": "^1.2",
         "ralouphie/mimey": "^2.1",
         "spatie/laravel-permission": "2.38.0",
         "symfony/string": "^5.1",
-        "yageorgiy/botman-vk-community-callback-driver": "^1.7.2",
-        "ext-fileinfo": "*"
+        "yageorgiy/botman-vk-community-callback-driver": "^1.7.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
@@ -86,7 +87,8 @@
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover"
+            "@php artisan package:discover",
+            "@php artisan version:refresh"
         ]
     },
     "config": {
