--- a/config/version.yml
+++ b/config/version.yml
@@ -7,7 +7,7 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: beta.1-2-g9da286c
+  prerelease: beta.1-3-ge3f73ed
   buildmetadata: ''
   commit: 0
   timestamp:
