.env.example update

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+# Bot links for Welcome page
+WELCOME_PAGE_TELEGRAM_URL="https://telegram.me/<YOUR_BOT_NAME>"
+WELCOME_PAGE_VK_URL="https://vk.com/<YOUR_BOT_COMMUNITY_NAME>"
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
