--- a/config/version.yml
+++ b/config/version.yml
@@ -7,7 +7,7 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: beta.1-3-ge3f73ed
+  prerelease: beta.1-7-g47bf3e7
   buildmetadata: ''
   commit: 0
   timestamp:
