"About" menu, welcome page edit, dependencies update

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ APP_URL=http://localhost
 # Bot links for Welcome page
 WELCOME_PAGE_TELEGRAM_URL="https://telegram.me/<YOUR_BOT_NAME>"
 WELCOME_PAGE_VK_URL="https://vk.com/<YOUR_BOT_COMMUNITY_NAME>"
+WELCOME_PAGE_GITHUB_URL="https://github.com/hiddenalt/memer-the-bot"
+WELCOME_PAGE_WIKI="https://github.com/hiddenalt/memer-the-bot/wiki"
 
 LOG_CHANNEL=stack
 
