--- a/config/version.yml
+++ b/config/version.yml
@@ -7,7 +7,7 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: beta.1-7-g47bf3e7
+  prerelease: beta.1-8-gecea289
   buildmetadata: ''
   commit: 0
   timestamp:
@@ -46,8 +46,8 @@ format:
   prerelease: '{$prerelease}'
   buildmetadata: '{$buildmetadata}'
   commit: '{$commit}'
-  version: 'version {$major}.{$minor}.{$patch} (commit {$commit})'
-  version-only: 'version {$major}.{$minor}.{$patch}'
+  version: '{$major}.{$minor}.{$patch} (commit {$commit})'
+  version-only: '{$major}.{$minor}.{$patch}'
   full: '{$version-only}[.?={$prerelease}][+?={$buildmetadata}] (commit {$commit})'
   compact: 'v{$major}.{$minor}.{$patch}-{$commit}'
   timestamp-year: '{$timestamp.year}'
