--- a/resources/frontend/admin/package.json
+++ b/resources/frontend/admin/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "@mdi/font": "^3.6.95",
     "core-js": "^3.6.5",
+    "es6-promise": "^4.2.8",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
-    "vuetify": "^2.2.11"
+    "vue-i18n": "^8.22.2",
+    "vuetify": "^2.2.11",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
