Web Access menu edit: dark mode, language switch

--- a/config/version.yml
+++ b/config/version.yml
@@ -7,7 +7,7 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: beta.1-12-gbbe75e0
+  prerelease: beta.1-13-g8acb658
   buildmetadata: ''
   commit: 0
   timestamp:
