--- a/resources/frontend/app/package.json
+++ b/resources/frontend/app/package.json
@@ -5,19 +5,24 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
     "@mdi/font": "^5.3.45",
     "core-js": "^3.6.5",
+    "es6-promise": "^4.2.8",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-headful": "^2.1.0",
+    "vue-i18n": "^8.22.2",
     "vue-router": "^3.3.2",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.2.11",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
+    "@intlify/vue-i18n-loader": "^1.0.0",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-router": "^4.4.1",
@@ -34,6 +39,7 @@
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-apollo": "~0.22.2",
+    "vue-cli-plugin-i18n": "~1.0.1",
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
