--- a/config/version.yml
+++ b/config/version.yml
@@ -7,7 +7,7 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: beta.1-13-g8acb658
+  prerelease: beta.1-14-g29a6271
   buildmetadata: ''
   commit: 0
   timestamp:
