--- a/config/version.yml
+++ b/config/version.yml
@@ -7,7 +7,7 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: beta.1-16-g7434e57
+  prerelease: beta.1-17-g244b7b4
   buildmetadata: ''
   commit: 0
   timestamp:
