Graphql: HostInfo response

--- a/config/version.yml
+++ b/config/version.yml
@@ -7,7 +7,7 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: beta.1-18-gc260d17
+  prerelease: beta.1-19-g08ca996
   buildmetadata: ''
   commit: 0
   timestamp:
