--- a/config/version.yml
+++ b/config/version.yml
@@ -7,7 +7,7 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: beta.2
+  prerelease: beta.2-1-ge22ce91
   buildmetadata: ''
   commit: 0
   timestamp:
