Bank title limit increase

--- a/config/version.yml
+++ b/config/version.yml
@@ -7,7 +7,7 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: beta.2-2-g820d1f7
+  prerelease: beta.2-3-gc03ae05
   buildmetadata: ''
   commit: 0
   timestamp:
