Locale update; GraphQL tracing support; conversations optimization

--- a/config/version.yml
+++ b/config/version.yml
@@ -7,7 +7,7 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: beta.2-3-gc03ae05
+  prerelease: beta.2-4-gd24626a
   buildmetadata: ''
   commit: 0
   timestamp:
