--- a/config/version.yml
+++ b/config/version.yml
@@ -7,7 +7,7 @@ current:
   major: 1
   minor: 0
   patch: 0
-  prerelease: beta.2-4-gd24626a
+  prerelease: beta.2-5-g6916bb2
   buildmetadata: ''
   commit: 0
   timestamp:
